--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -248,6 +248,7 @@
   "Ntr": "Neptune",
   "Watcher": "Watcher",
   "Flashman": "Flash",
+  "Giant": "Giant",
   "Torch": "Torch",
   "Seer": "Seer",
   "Brakar": "Tiebreaker",
@@ -294,6 +295,7 @@
   "Prefix.Ntr": "Neptune",
   "Prefix.Watcher": "Watcher",
   "Prefix.Flashman": "Flash",
+  "Prefix.Giant": "Giant",
   "Prefix.Torch": "Torch",
   "Prefix.Seer": "Seer",
   "Prefix.Brakar": "Tiebreaker",
@@ -511,6 +513,7 @@
   "WatcherInfo": "You see vote colors",
   "LastImpostorInfo": "Lower kill cooldown",
   "FlashmanInfo": "You're faster",
+  "GiantInfo": "You're slower",
   "TorchInfo": "You have a higher vision!",
   "SeerInfo": "You see when players die",
   "BrakarInfo": "Break tied votes",
@@ -730,6 +733,7 @@
   "NtrInfoLong": "(Add-ons):\\nWhen there is Neptune, all players will see that they are Lovers with Neptune, and they will not die in love together and will not change the win conditions. Note: Lovers won't become Neptune, and Neptune won't become Lovers.",
   "WatcherInfoLong": "(Add-ons):\\nDuring the meeting, Watcher can see everyone's votes.",
   "FlashmanInfoLong": "(Add-ons):\\nThe Flash is faster by default.",
+  "GiantInfoLong": "(Add-ons):\\nThe Giant is slower by default.",
   "TorchInfoLong": "(Add-ons):\\nOnly Crewmates will get Torch, who have increased vision and may not be affected by Lights Sabotage.",
   "SeerInfoLong": "(Add-ons):\\nWhen a player dies, the Seer sees a red flash (with an alarm sound like sabotage).",
   "BrakarInfoLong": "(Add-ons):\\nIn case of a tie, the target voted by the Tiebreaker has priority. However, if multiple Tiebreakers choose different targets simultaneously, their skills will not take effect.",
@@ -1240,6 +1244,7 @@
   "JesterVision": "<color=#ec62a5>Jester</color> Vision",
   "LawyerVision": "<color=#008080>Lawyer</color> Vision",
   "FlashmanSpeed": "<color=#ff8400>Flash</color> Speed",
+  "GiantSpeed": "<color=#32a852>Giant</color> Speed",
   "LoverSuicide": "<color=#ff9ace>Lovers</color> die together",
   "NumberOfLovers": "Number of <color=#ff9ace>Lover Pairs</color> (x2 members)",
   "LoverKnowRoles": "<color=#ff9ace>Lovers</color> know the roles of each other",
