Add Kamikaze, Fix Disperser, Optimize Pet Suffix

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1604,6 +1604,7 @@
   "DeathReason.Jinx": "Jinxed",
   "DeathReason.Demolished": "Demolished",
   "DeathReason.YinYanged": "Yin Yanged",
+  "DeathReason.Kamikazed": "Kamikazed",
   "DeathReason.etc": "Other",
   "DeathReason.Hack": "Hacked",
   "DeathReason.Curse": "Cursed",
@@ -2324,7 +2325,7 @@
   "DivinatorCheck.Result4": "<b>{0}</b> is either Pestilence, Electric, Plaguebearer, Donut Delivery, Observer, Blood Knight, Guardian, or Wildling",
   "DivinatorCheck.Result5": "<b>{0}</b> is either Bard, Sentinel, Ricochet, Juggernaut, Security Guard, Arrogance, Killing Machine, or Butcher",
   "DivinatorCheck.Result6": "<b>{0}</b> is either Coroner, Mole, Stealth, Evil Tracker, Mortician, Tracefinder, Romantic, or Tracker",
-  "DivinatorCheck.Result7": "<b>{0}</b> is either Bodyguard, Bomber, Lookout, Vengeful Romantic, Ruthless Romantic, Fireworker, or Nuker",
+  "DivinatorCheck.Result7": "<b>{0}</b> is either Bodyguard, Bomber, Lookout, Vengeful Romantic, Ruthless Romantic, Kidnapper, Fireworker, or Nuker",
   "DivinatorCheck.Result8": "<b>{0}</b> is either Bounty Hunter, Sprayer, Mafioso, Detective, Hater, Cleaner, Medusa, or Psychic",
   "DivinatorCheck.Result9": "<b>{0}</b> is either Convict, Penguin, Hookshot, Executioner, Lawyer, Snitch, Disperser, or Doctor",
   "DivinatorCheck.Result10": "<b>{0}</b> is either Councillor, Escort, Bubble, Shiftguard, Dictator, Judge, Cleanser, or Cursed Wolf",
@@ -2335,7 +2336,7 @@
   "DivinatorCheck.Result15": "<b>{0}</b> is either Infectious, Detour, Virus, Agitator, Monarch, Revolutionist, Express, or Cultist",
   "DivinatorCheck.Result16": "<b>{0}</b> is either Innocent, Gaulois, Sapper, Refugee, Bandit, Inhibitor, Mechanic, or Saboteur",
   "DivinatorCheck.Result17": "<b>{0}</b> is either Medic, Vector, Analyzer, RiftMaker, Jester, The Glitch, Lurker, or Sunnyboy",
-  "DivinatorCheck.Result18": "<b>{0}</b> is either Nemesis, Hitman, Gangster, Glitch, Luckey, or Underdog",
+  "DivinatorCheck.Result18": "<b>{0}</b> is either Nemesis, Hitman, Gangster, Glitch, Kamikaze, Luckey, or Underdog",
   "DivinatorCheck.Result19": "<b>{0}</b> is either Evil Guesser, Nice Guesser, Blackmailer, Eclipse, Reckless, Stalker, Camouflager, or Chameleon",
   "DivinatorCheck.Result20": "<b>{0}</b> is either Jackal, Sidekick, Duellist, WeaponMaster, Maverick, Opportunist, Pursuer, or Provocateur",
   "DivinatorCheck.Result21": "<b>{0}</b> is either Poisoner, Magician, Yin Yanger, Vampire, Pacifist, Head Hunter, Soul Catcher, or Traitor",
@@ -2395,6 +2396,13 @@
   "pet_UFO": "UFO",
   "pet_D2WormPet": "Worm",
   "pet_RANDOM_FOR_EVERYONE": "<color=#ffff00>Random</color>",
+  "Kidnapper": "Kidnapper",
+  "KidnapperInfo": "TP Players to you by shifting into them",
+  "KidnapperInfoLong": "(Impostors):\\nAs the Kidnapper, when you shapeshift into someone, they teleport to you.",
+  "Kamikaze": "Kamikaze",
+  "KamikazeInfo": "Mark Players That Die With You",
+  "KamikazeInfoLong": "(Impostors):\\nAs the Kamikaze, you can mark players by clicking your kill button once on them. When you die, all players that you marked will also die. You can kill normally by double clicking your kill button on someone.",
+  "KamikazeMarkCD": "Cooldown After Marking",
   "Jailor": "Jailor",
   "JailorInfo": "Lock up your target in Jail",
   "JailorInfoLong": "(Crewmates):\\nAs the Jailor, use your kill button to lock a player in jail. Jailed players cannot be guessed or judged and jailed players can only guess Jailor.",
