--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -1247,7 +1247,7 @@
     "SheriffMadCanKillCrew": "Pode assassinar <color=#8cffff>Tripulantes</color>",
     "DoctorTaskCompletedBatteryCharge": "Duração da Bateria",
     "SnitchEnableTargetArrow": "Ver seta em direção ao alvo",
-    "GiantSpeed": "Velocidade do <color=#32a852>Giant</color>",
+    "GiantSpeed": "Velocidade do <color=#32a852>Gigante</color>",
     "SnitchCanGetArrowColor": "Ver setas coloridas com base nas cores das facções",
     "SnitchCanFindNeutralKiller": "Pode encontrar <color=#7f8c8d>Neutros Assassinos</color>",
     "SnitchCanFindMadmate": "Pode encontrar <color=#ff1919>Cúmplices</color>",
