Update pt-br strings (#16)
* Update pt-br strings

* Update pt_BR.json

--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -291,6 +291,7 @@
     "Antidote": "Antidoto",
     "Swift": "Veloz",
     "Ghoul": "Espírito",
+    "Giant": "Gigante",
     "Prefix.Ntr": "Netuno",
     "Prefix.Watcher": "Visão de Voto",
     "Prefix.Flashman": "Flash",
@@ -333,6 +334,7 @@
     "Prefix.Ghoul": "Espírito",
     "Prefix.Sunglasses": "Óculos de Sol",
     "Prefix.Mare": "Pesadelo",
+    "Prefix.Giant": "Gigante",
     "PrefixB.Ntr": "(Netuno)",
     "PrefixB.Watcher": "(Visão de Voto)",
     "PrefixB.Flashman": "(Flash)",
@@ -525,6 +527,7 @@
     "NWitchInfo": "Controle os Tripulantes e viva para ver eles perderem",
     "TotocalcioInfo": "Siga um jogador e ajude-o",
     "SuccubusInfo": "Encante a todos!",
+    "GiantInfo": "Você é lento",
     "HexMasterInfo": "Enfeitiçe jogadores para matá-los em reuniões",
     "WraithInfo": "Use dutos para se tornar temporariamente invisível",
     "NSerialKillerInfo": "Mate todos para vencer!",
@@ -587,6 +590,7 @@
     "RecruitInfo": "Ajude o Chacal",
     "AdmiredInfo": "O Admirador te escolheu para vencer com ele",
     "GlowInfo": "Você brilha no escuro",
+    "GiantInfoLong": "(Add-ons):\\nO Gigante é lento por padrão",
     "DiseasedInfo": "Aumente o tempo de recarga do jogador que interagiu com você",
     "AntidoteInfo": "Diminua o tempo de recarga do jogador que interagir com você",
     "SwiftInfo": "Seus abates não causam uma investida",
@@ -1243,6 +1247,7 @@
     "SheriffMadCanKillCrew": "Pode assassinar <color=#8cffff>Tripulantes</color>",
     "DoctorTaskCompletedBatteryCharge": "Duração da Bateria",
     "SnitchEnableTargetArrow": "Ver seta em direção ao alvo",
+    "GiantSpeed": "Velocidade do <color=#32a852>Gigante</color>",
     "SnitchCanGetArrowColor": "Ver setas coloridas com base nas cores das facções",
     "SnitchCanFindNeutralKiller": "Pode encontrar <color=#7f8c8d>Neutros Assassinos</color>",
     "SnitchCanFindMadmate": "Pode encontrar <color=#ff1919>Cúmplices</color>",
