--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -2442,7 +2442,7 @@
     "pet_D2WormPet": "Worm",
     "pet_RANDOM_FOR_EVERYONE": "<color=#ffff00>Aleatório</color>",
     "Sequestrador": "Sequestrador",
-    "KidnapperInfo": "Teleporte jogadores para você se Transformando neles",
+    "KidnapperInfo": "Teleporte os jogadores para você se transformando neles",
     "KidnapperInfoLong": "(Impostores):\\nComo o Sequestrador, quando você se transforma em alguém, esse alguém vai se teletransportar para você.",
     "Kamikaze": "Kamikaze",
     "KamikazeInfo": "Marque os jogadores para fazer-los morrer com você",
