--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -1941,6 +1941,7 @@
     "MerchantSellExperimental": "Pode vender Atributos <color=#76b8e0>Experimentais</color>",
     "MerchantSellHarmfulToEvil": "Pode vender Atributos <color=#ff1919>Prejudiciais</color> apenas para <color=#ff1919>Malvados</color>",
     "MerchantSellHelpfulToCrew": "Pode vender Atributos <color=#8cffff>Prejudiciais</color> apenas para <color=#8cffff>Tripulantes</color>",
+    "MerchantGivesAllMoneyOnBribe": "<color=#D27D2D>Atribuidor</color> dá <color=#ff0000>todo o dinheiro</color> no suborno",
     "SpiritcallerSpiritMax": "Número Máximo de <color=#003366>Espíritos Malignos</color>",
     "SpiritcallerSpiritAbilityCooldown": "Recarga da Habilidade de <color=#003366>Espírito Maligno</color>",
     "SpiritcallerFreezeTime": "Tempo de Habiliade Congelar de <color=#003366>Espírito Maligno</color>",
