Make intro screen translatable

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2979,9 +2979,9 @@
   "FFA_ChatDuringGame": "Chat During Game",
   "FFAChatMessageNotify": "[<color=#00ffff>Chat</color>] <color=#00ffa5>{0}:</color> {1}",
   "Killer": "FREE FOR ALL",
-  "KillerInfo": "Kill Everyone to Win",
-  "KillerInfoLong": "Kill Everyone to Win",
-  "MoveAndStop": "Stop And Go",
+  "KillerInfo": "KILL EVERYONE TO WIN",
+  "KillerInfoLong": "KILL EVERYONE TO WIN",
+  "MoveAndStop": "STOP AND GO",
   "ModeMoveAndStop": "Gamemode: Stop And Go",
   "ModeDescribe.MoveAndStop": "In the Stop And Go game mode, everyone has 3 timers, each with a symbol that represents a direction you can move in. For example:\\n← (left) 17s\\n→ (right) 5s\\n● (up and down) 9s\\n\\nEach symbol is either red or green. When the timer next to the symbol reaches 0, the color swaps for that symbol.\\n\\nConcept:\\nYou cannot move in directions which you have a red symbol of, or you die.\\nEveryone is a crewmate, first to finish all their tasks wins!",
   "MoveAndStop_RightCounterGreenMin": "Right Counter Minimum Green Time",
@@ -2999,8 +2999,8 @@
   "MoveAndStop_ExtraGreenTimeOnAirship": "Extra Green Time On AirShip",
   "MoveAndStop_ExtraGreenTimeOnFungle": "Extra Green Time On Fungle",
   "Tasker": "Tasker",
-  "TaskerInfo": "Finish Tasks First to Win",
-  "TaskerInfoLong": "Finish Tasks First to Win",
+  "TaskerInfo": "FINISH TASKS FIRST TO WIN",
+  "TaskerInfoLong": "FINISH TASKS FIRST TO WIN",
   "GNoCommandInfo": "<b>This Command can only be used when in lobby or after you die.</b>\\n\\ntype <b>/gno X</b> to play guess a number. X can be a number between 0 and 99 (both included). \\n\\nYou get maximum of <color=#ff0000>7 tries</color> to guess the number.\\n\\n Example:- <b>/gno 10</b>",
   "GNoLost": "Oh, you were so close! Just one more guess, and you might have deciphered the Da Vinci code! By the way, <color=#ff0000>the secret number was... {0}!</color> But hey, you were only off by a few billion possibilities.  Better luck next time, Sherlock! ",
   "GNoLow": "Oh, you're really nailing this! It's so low, I almost need a shovel to dig it up!\\nYou have <color=#ff0000>{0} guesses</color> left!",
