Add Magnet (add-on)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -266,6 +266,7 @@
   "Guesser": "Guesser",
   "Necroview": "Necroview",
   "Reach": "Reach",
+  "Magnet": "Magnet",
   "Charmed": "Charmed",
   "Bait": "Bait",
   "Trapper": "Beartrap",
@@ -315,6 +316,7 @@
   "Prefix.Necroview": "Necroview",
   "Prefix.Recruit": "Recruit",
   "Prefix.Reach": "Reach",
+  "Prefix.Magnet": "Magnet",
   "Prefix.Onbound": "Onbound",
   "Prefix.Knighted": "Knighted",
   "Prefix.Unreportable": "Disregarded",
