Add Sleuth (add-on)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -247,6 +247,7 @@
   "Madmate": "Madmate",
   "Ntr": "Neptune",
   "Watcher": "Watcher",
+  "Sleuth": "Sleuth",
   "Flashman": "Flash",
   "Giant": "Giant",
   "Torch": "Torch",
@@ -295,6 +296,7 @@
   "Ghoul": "Ghoul",
   "Prefix.Ntr": "Neptune",
   "Prefix.Watcher": "Watcher",
+  "Prefix.Sleuth": "Sleuth",
   "Prefix.Flashman": "Flash",
   "Prefix.Giant": "Giant",
   "Prefix.Torch": "Torch",
@@ -535,6 +537,8 @@
   "BaitInfo": "Your killer self-reports your body",
   "TrapperInfo": "Freeze your killer for a few seconds",
   "OnboundInfo": "You can't be guessed",
+  "MagnetInfo": "Pull your victims to you",
+  "SleuthInfo": "Know the roles of the bodies you report",
   "UnreportableInfo": "Your body can't be reported",
   "RogueInfo": "Work against your team and win with other Rogues",
   "LuckyInfo": "Dodge attackers",
@@ -734,6 +738,8 @@
   "MadmateInfoLong": "(Add-ons):\\nMadmates assist the Impostors in winning the game. They are only available to Crewmates but can identify Impostors depending on the host's settings. Certain roles like Sheriff, Snitch, and Mayor can become Madmates. The abilities of some roles change when they become Madmates. For example, the Grenadier's flash bomb works on Crewmates and Neutrals instead of Impostors. The Judge can judge anyone.",
   "NtrInfoLong": "(Add-ons):\\nWhen there is Neptune, all players will see that they are Lovers with Neptune, and they will not die in love together and will not change the win conditions. Note: Lovers won't become Neptune, and Neptune won't become Lovers.",
   "WatcherInfoLong": "(Add-ons):\\nDuring the meeting, Watcher can see everyone's votes.",
+  "MagnetInfoLong": "(Add-ons):\\nWhen you kill, your victims lunge to you, instead of you lunging to them",
+  "SleuthInfoLong": "(Add-ons):\\nYou know the roles of the bodies you report.",
   "FlashmanInfoLong": "(Add-ons):\\nThe Flash is faster by default.",
   "GiantInfoLong": "(Add-ons):\\nThe Giant is slower by default.",
   "TorchInfoLong": "(Add-ons):\\nOnly Crewmates will get Torch, who have increased vision and may not be affected by Lights Sabotage.",
@@ -1732,6 +1738,7 @@
   "DetectiveNoticeVictim": "According to your investigation,\\nthe victim (<b>{0}</b>) had the role [{1}]",
   "DetectiveNoticeKiller": "\\nThe killer's role is <b>{0}</b>",
   "DetectiveNoticeKillerNotFound": "The Detective couldn't find evidence leading to a murderer, this is most likely suicide.",
+  "SleuthMsg": "{0}'s role is: {1}",
   "GodNoticeAlive": "During the meeting, each player felt a revelation from heaven, and it turned out that God is still alive!",
   "WorkaholicAdviceAlive": "It's not recommended to kill or vote <b>{0}</b> out. Doing so will help them finish their tasks quicker.",
   "GuessDead": "Sorry, but it's impossible to guess roles after your death",
