--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -2441,7 +2441,7 @@
     "pet_UFO": "UFO",
     "pet_D2WormPet": "Worm",
     "pet_RANDOM_FOR_EVERYONE": "<color=#ffff00>Aleatório</color>",
-    "Sequestrador": "Sequestrador",
+    "Kidnapper": "Sequestrador",
     "KidnapperInfo": "Teleporte os jogadores para você se transformando neles",
     "KidnapperInfoLong": "(Impostores):\\nComo o Sequestrador, quando você se transforma em alguém, esse alguém vai se teletransportar para você.",
     "Kamikaze": "Kamikaze",
