Add Soul Hunter (damn this was complicated), More Rework in CustomRoleSelector

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2354,6 +2354,7 @@
   "DivinatorCheck.Result24": "<b>{0}</b> is either Lazy Guy, Hacker, Guess Manager, Follower, Pelican, Vengeance, Scavenger, or Vulture",
   "DivinatorCheck.Result25": "<b>{0}</b> is either Jinx, Vigilante, Benefactor, Veteran, Enigma, Task Manager, Pyromaniac, or Hangman",
   "DivinatorCheck.Result26": "<b>{0}</b> is either Medium, Camera Man, Nightmare, Spiritcaller, Spiritualist, Parasite, Swooper, or Wraith",
+  "DivinatorCheck.Result27": "<b>{0}</b> is either Time Manager, Time Master, Time Thief, Soul Hunter, Autocrat, Curse, Tether or Sniper",
   "DivinatorCheck.Result28": "<b>{0}</b> is either Puppeteer, Chronomancer, Transmitter, Deputy, Aid, Transporter, Twister, Mercenary",
   "DivinatorCheck.Result29": "<b>{0}</b> is either Crewpostor, Marshall, Nullifier, Altruist, Workaholic, Phantom, Speedrunner, or Terrorist",
   "SunnyboyChance": "<color=#ff9902>Sunnyboy</color> Chance",
@@ -2857,6 +2858,20 @@
   "MagicianBombExploded": "Time bomb exploded",
   "MagicianBombExlodesIn": "Bomb explodes in {0}s",
   "MagicianCardUsed": "Card used",
+  "SoulHunter": "Soul Hunter",
+  "SoulHunterInfo": "Hunt Souls To Win",
+  "SoulHunterInfoLong": "(Neutrals):\\nAs the Soul Hunter, you can mark your target via your kill button. In the next meeting, you'll be frozen for a set amount of seconds and your target will be notified about being your target. Your target will not be able to vent, call a meeting or kill you. You must kill your target within a specified number of seconds, else you lose a soul. If you kill your target in time, you gain a soul. Collect a set amount of souls to satisfy your win condition. If your win condition is satisfied at the end of the game, you'll win with the winning team.",
+  "SoulHunterNumOfSoulsToWin": "Number of Souls Required to Win",
+  "SoulHunterFreezeTimeAfterMeeting": "Waiting Time After Meeting",
+  "SoulHunterTimeToKillTarget": "Time to Kill Target",
+  "SoulHunterTargetNotify": "The <color=#3f2c61>Soul Hunter</color>, <color=#00ffa5>{0}</color> is hunting you. Hide!",
+  "SoulHunterTargetNotifySurvived": "<color=#00ff00>You survived!</color>",
+  "SoulHunterTargetNotifyNoVent": "<color=#ffff00>You cannot vent while being hunted</color>",
+  "SoulHunterTargetNotifyNoMeeting": "<color=#ffff00>You cannot call emergency meetings while being hunted</color>",
+  "SoulHunterTargetNotifyNoKill": "<color=#ffff00>You cannot kill the <color=#3f2c61>Soul Hunter</color> while being hunted</color>",
+  "SoulHunterNotify": "You have <color=#00ffa5>{0}s</color> to kill <color=#3f2c61>{1}</color>",
+  "SoulHunterNotifySuccess": "<color=#00ff00>Success!</color>",
+  "SoulHunterNotifyFreeze": "You can begin hunting <color=#3f2c61>{0}</color> in <color=#00ffa5>{1}s</color>",
   "Librarian": "Librarian",
   "LibrarianInfo": "Silence the Reporters Nearby",
   "LibrarianInfoLong": "(Impostors):\\nAs the Librarian, when you're in silencing mode, if someone reports a body next to you, you'll kill them instead. After you kill someone like this, everyone will see 'SSSH!' in red under your name.",
@@ -3476,6 +3491,7 @@
   "WinnerRoleText.Bubble": "Bubble Wins!",
   "WinnerRoleText.Hookshot": "Hookshot Wins!",
   "WinnerRoleText.Sprayer": "Sprayer Wins!",
+  "WinnerRoleText.SoulHunter": "Soul Hunter Wins!",
   "AdditionalWinnerRoleText.Sidekick": "along with Sidekicks",
   "AdditionalWinnerRoleText.Opportunist": "The Opportunist survived",
   "AdditionalWinnerRoleText.Lawyer": "The Lawyer wins along",
