--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -1619,6 +1619,7 @@
     "DeathReason.Suicide": "Suicídio",
     "DeathReason.Spell": "Enfeitiçado",
     "DeathReason.Cursed": "Amaldiçoado",
+    "DeathReason.Kamikazed": "Kamikazado",
     "DeathReason.Hex": "Enfeitiçado",
     "DeathReason.Bite": "Mordido",
     "DeathReason.Poison": "Envenenado",
@@ -2369,7 +2370,7 @@
     "DivinatorCheck.Result4": "<b>{0}</b> é uma função entre: Peste, Eletricista, Porta-Pragas, Entregador de Donuts, Observador, Cavaleiro Sangrento, Guardião, ou Selvagem",
     "DivinatorCheck.Result5": "<b>{0}</b> é uma função entre: Bardo, Sentinela, Ricochete, Juggernaut, Guarda de Segurança, Arrogancia, Maquina Mortifera, ou Açogueiro",
     "DivinatorCheck.Result6": "<b>{0}</b> é uma função entre: Detetive, Toupeira, Furtivo, Rastreador do Mal, Funerário, Biólogo, Romantico, ou Rastreador",
-    "DivinatorCheck.Result7": "<b>{0}</b> é uma função entre: Guarda-Costas, Bombardeiro, Artilheiro, Demolidor, Vigia, ou Bombardeiro Nuclear",
+    "DivinatorCheck.Result7": "<b>{0}</b> é uma função entre: Guarda-Costas, Bombardeiro, Artilheiro, Demolidor, Sequestrador, Vigia, ou Bombardeiro Nuclear",
     "DivinatorCheck.Result8": "<b>{0}</b> é uma função entre: Caçador de Recompensas, Pichador, Mafioso, Perícia, Odiador, Faxineiro, Medusa, ou Psiquico",
     "DivinatorCheck.Result9": "<b>{0}</b> é uma função entre: Condenador, Pinguim, Enganchador, Executor, Advogado, Agente, Dispersor, ou Doutor",
     "DivinatorCheck.Result10": "<b>{0}</b> é uma função entre: Conselheiro, Escoltador, Bombardeador, Meta-Guarda, Ditador, Juiz, Limpador, ou Lobo Maldito",
@@ -2380,7 +2381,7 @@
     "DivinatorCheck.Result15": "<b>{0}</b> é uma função entre: Zumbi, Desviador, Vírus, Demolidor, Monarca, Revolucionista, Expresso, ou Cultista",
     "DivinatorCheck.Result16": "<b>{0}</b> é uma função entre: Inocente, Gaulês, Sapador, Refugiado, Bandido, Inibidor, Mecânico, or Sabotador",
     "DivinatorCheck.Result17": "<b>{0}</b> é uma função entre: Médico, Mario, Analisador, Criador de Fendas, Palhaço, Glitch, Espreitador, ou Sunnyboy",
-    "DivinatorCheck.Result18": "<b>{0}</b> é uma função entre: Nemesis, Hitman, Gangster, Sortudo, ou Azarão",
+    "DivinatorCheck.Result18": "<b>{0}</b> é uma função entre: Nemesis, Hitman, Gangster, Sortudo, Kamikaze ou Azarão",
     "DivinatorCheck.Result19": "<b>{0}</b> é uma função entre: Apostador, Justiceiro, Silenciador, Eclipse, Imprudente, Stalker, Camuflador ou Transparente",
     "DivinatorCheck.Result20": "<b>{0}</b> é uma função entre: Chacal, Ajudante, Duelista, Mestre das Armas, Mestre Assassino, Oportunista, Perseguidor, ou Provocador",
     "DivinatorCheck.Result21": "<b>{0}</b> é uma função entre: Envenenador, Mágico, Vinculador, Vampiro, Pacifista, Predador, ou Traidor",
@@ -2441,6 +2442,13 @@
     "pet_UFO": "UFO",
     "pet_D2WormPet": "Worm",
     "pet_RANDOM_FOR_EVERYONE": "<color=#ffff00>Aleatório</color>",
+    "Kidnapper": "Sequestrador",
+    "KidnapperInfo": "Teleporte os jogadores para você se transformando neles",
+    "KidnapperInfoLong": "(Impostores):\\nComo o Sequestrador, quando você se transforma em alguém, esse alguém vai se teletransportar para você.",
+    "Kamikaze": "Kamikaze",
+    "KamikazeInfo": "Marque os jogadores para fazer-los morrer com você",
+    "KamikazeInfoLong": "(Impostores):\\nComo Kamikaze, você pode marcar jogadores clicando uma vez no botão de matar neles. Quando você morrer, todos os jogadores que você marcou também morrerão. Você pode matar normalmente clicando duas vezes em seu botão de matar em alguém.",
+    "KamikazeMarkCD": "Tempo após marcar um jogador",
     "Jailor": "Carcereiro",
     "JailorInfo": "Enjaule jogadores suspeitos",
     "JailorInfoLong": "(Tripulantes):\\n★Como o Carcereiro, use seu botão de abate para enjaular um jogador na cadeia. \\n★Durante a próxima reunião, o jogador enjaulado não pode votar ou ser ejetado. \\n★O Carcereiro pode escolher executar o prisioneiro votando nele. \\n★Se o Carcereiro executar um jogador inocente, ele perde sua habilidade. \\n★Se o jogador for malvado, então ele pode executar qualquer um.",
