Add Asthmatic (add-on)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -249,6 +249,7 @@
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
   "Flashman": "Flash",
+  "Asthmatic": "Asthmatic",
   "Giant": "Giant",
   "Torch": "Torch",
   "Seer": "Seer",
@@ -298,6 +299,7 @@
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
   "Prefix.Flashman": "Flash",
+  "Prefix.Asthmatic": "Asthmatic",
   "Prefix.Giant": "Giant",
   "Prefix.Torch": "Torch",
   "Prefix.Seer": "Seer",
@@ -537,6 +539,7 @@
   "BaitInfo": "Your killer self-reports your body",
   "TrapperInfo": "Freeze your killer for a few seconds",
   "OnboundInfo": "You can't be guessed",
+  "AsthmaticInfo": "Stop And Go",
   "MagnetInfo": "Pull your victims to you",
   "SleuthInfo": "Know the roles of the bodies you report",
   "UnreportableInfo": "Your body can't be reported",
@@ -764,6 +767,7 @@
   "InfectedInfoLong": "(Betrayal Add-ons):\\nThe Infected add-on is obtained by being infected by the Infectious.\\nOnce infected, you work for the Infectious and do not win with your original team.",
   "OnboundInfoLong": "(Add-ons):\\nWith the Onbound add-on, you cannot be guessed in meetings.",
   "KnightedInfoLong": "(Add-ons):\\nWhen a Monarch knights someone, they get an extra vote.",
+  "AsthmaticInfoLong": "(Add-ons):\\nYou always have a symbol below your name with a timer that is red or green. You cannot move when the symbol/timer is red. The timer indicates when the color will change.",
   "UnreportableInfoLong": "(Add-ons):\\nWith the Disregarded add-on, your corpse cannot be reported.",
   "ContagiousInfoLong": "(Betrayal Add-ons):\\nWhen the Virus infects you, you become contagious.\\nContagious players are on the Virus team.\\n\\nWhether or not you die after a meeting depends on the settings for the Virus.",
   "RogueInfoLong": "(Betrayal Add-ons):\\nAs the Rogue, you work against your team and work with other Rogues.\\n\\nYou cannot win with your original team.",
