Add Disco (bruh) (add-on)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -249,6 +249,7 @@
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
   "Flashman": "Flash",
+  "Disco": "Disco",
   "Asthmatic": "Asthmatic",
   "Giant": "Giant",
   "Torch": "Torch",
@@ -299,6 +300,7 @@
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
   "Prefix.Flashman": "Flash",
+  "Prefix.Disco": "Disco",
   "Prefix.Asthmatic": "Asthmatic",
   "Prefix.Giant": "Giant",
   "Prefix.Torch": "Torch",
@@ -551,6 +553,7 @@
   "GravestoneInfo": "Your role is revealed when you die",
   "LazyInfo": "You're too lazy",
   "AutopsyInfo": "You see how others died",
+  "DiscoInfo": "You continuously change colors",
   "LoyalInfo": "You cannot be recruited",
   "EvilSpiritInfo": "You are an evil Spirit",
   "RecruitInfo": "Help the Jackal",
@@ -745,6 +748,7 @@
   "SleuthInfoLong": "(Add-ons):\\nYou know the roles of the bodies you report.",
   "FlashmanInfoLong": "(Add-ons):\\nThe Flash is faster by default.",
   "GiantInfoLong": "(Add-ons):\\nThe Giant is slower by default.",
+  "DiscoInfoLong": "(Add-ons):\\nYou change your skin color every few seconds.",
   "TorchInfoLong": "(Add-ons):\\nOnly Crewmates will get Torch, who have increased vision and may not be affected by Lights Sabotage.",
   "SeerInfoLong": "(Add-ons):\\nWhen a player dies, the Seer sees a red flash (with an alarm sound like sabotage).",
   "BrakarInfoLong": "(Add-ons):\\nIn case of a tie, the target voted by the Tiebreaker has priority. However, if multiple Tiebreakers choose different targets simultaneously, their skills will not take effect.",
@@ -1080,6 +1084,10 @@
   "SidekickKnowOtherSidekickRole": "<color=#00b4eb>Sidekicks</color> know the roles of other <color=#00b4eb>Sidekicks</color>",
   "SidekickCanKillSidekick": "<color=#00b4eb>Sidekicks</color> can kill other <color=#00b4eb>Sidekicks</color>",
   "LegacyMafia": "Use Legacy Version",
+  "AsthmaticMinRedTime": "Minimum Red Time",
+  "AsthmaticMaxRedTime": "Maximum Red Time",
+  "AsthmaticMinGreenTime": "Minimum Green Time",
+  "AsthmaticMaxGreenTime": "Maximum Green Time",
   "ArsonistKeepsGameGoing": "Arsonist keeps the game going",
   "ArsonistCanIgniteAnytime": "Can Ignite Anytime",
   "ArsonistMinPlayersToIgnite": "Minimum Doused Players required to Ignite",
