Add Missing Disco String

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3525,5 +3525,6 @@
   "ErrorEndTextDescription": "To avoid crashing, the game was forcibly ended.",
   "ForceEnd": "Aborted",
   "EveryoneDied": "Everyone died",
-  "ForceEndText": "Host has aborted the game"
+  "ForceEndText": "Host has aborted the game",
+  "DiscoChangeInterval": "Disco Change Color Interval"
 }
