Add Truant (add-on), Extra Pet Messages when no ability is triggered

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -249,6 +249,7 @@
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
   "Flashman": "Flash",
+  "Truant": "Truant",
   "Disco": "Disco",
   "Asthmatic": "Asthmatic",
   "Giant": "Giant",
@@ -300,6 +301,7 @@
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
   "Prefix.Flashman": "Flash",
+  "Prefix.Truant": "Truant",
   "Prefix.Disco": "Disco",
   "Prefix.Asthmatic": "Asthmatic",
   "Prefix.Giant": "Giant",
@@ -522,6 +524,7 @@
   "LastImpostorInfo": "Lower kill cooldown",
   "FlashmanInfo": "You're faster",
   "GiantInfo": "You're slower",
+  "TruantInfo": "You freeze after meetings for some time",
   "TorchInfo": "You have a higher vision!",
   "SeerInfo": "You see when players die",
   "BrakarInfo": "Break tied votes",
@@ -754,6 +757,7 @@
   "BrakarInfoLong": "(Add-ons):\\nIn case of a tie, the target voted by the Tiebreaker has priority. However, if multiple Tiebreakers choose different targets simultaneously, their skills will not take effect.",
   "ObliviousInfoLong": "(Add-ons):\\nDetective and Cleaners won't be Oblivious. Oblivious cannot report dead bodies. Note: Bait killed by Oblivious will still be reported automatically, and Oblivious can still be used as a scapegoat for the Anonymous.",
   "BewilderInfoLong": "(Add-ons):\\nBewilder's vision changes killer's vision on death.",
+  "TruantInfoLong": "(Add-ons):\\nAfter each meeting, you freeze in place for a set amount of seconds.",
   "WorkhorseInfoLong": "(Add-ons):\\nComplete all tasks to become Workhorse and get extra tasks set by the host.",
   "FoolInfoLong": "(Add-ons):\\nImpostors and Mechanics won't be Fool. Fools can't repair any sabotage.",
   "AvangerInfoLong": "(Add-ons):\\nHost can allow Impostor to become Avenger. If Avenger is killed, they'll revenge a random player.",
@@ -2770,6 +2774,27 @@
   "Axe": "Axe",
   "Lance": "Lance",
   "Shield": "Shield",
+  "NoPetActionMsg1": "You just ate a cookie",
+  "NoPetActionMsg2": "You look around",
+  "NoPetActionMsg3": "You start wondering whether you are sus or not",
+  "NoPetActionMsg4": "You practice your detective stare.",
+  "NoPetActionMsg5": "You contemplate the meaning of life for a moment.",
+  "NoPetActionMsg6": "You try to teach your pet the art of stealth.",
+  "NoPetActionMsg7": "You attempt to have a deep conversation with your pet about the mysteries of the spaceship.",
+  "NoPetActionMsg8": "You rehearse your emergency meeting speech in your head.",
+  "NoPetActionMsg9": "You realize you left the space oven on in the cafeteria.",
+  "NoPetActionMsg10": "You practice your emergency venting technique, just in case.",
+  "NoPetActionMsg11": "You perform a quick dance move to entertain your pet.",
+  "NoPetActionMsg12": "You start a one-person conga line around the reactor.",
+  "NoPetActionMsg13": "You mime fixing a non-existent spaceship engine.",
+  "NoPetActionMsgImp": "You are an Impostor, but you probably know that",
+  "NoPetActionMsgImp2": "You debate whether space pizza or space burgers would make a better crewmate meal.",
+  "NoPetActionMsgCrewTaskDone": "You are free",
+  "NoPetActionMsgCrewWithTasksLeft": "You realize you still have tasks to do",
+  "NoPetActionMsgCrew": "You imagine yourself as the impostor in a parallel universe.",
+  "NoPetActionMsgNeutral": "You imagine yourself as the impostor in a parallel universe.",
+  "NoPetActionMsgNeutral2": "You question yourself how did you get here",
+  "TruantWaitingTime": "Waiting Time After Meetings",
   "Eclipse": "Eclipse",
   "EclipseInfo": "Your vision increases with each kill you get",
   "EclipseInfoLong": "(Neutral):\\nAs the Eclipse, your job is to kill everyone and be the last one standing to win.\\nYou start with a low vision, and with each kill you get, it slowly increases.",
