Fix multiple role assignment in role selector rework, fix CopyCat

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2774,6 +2774,9 @@
   "Axe": "Axe",
   "Lance": "Lance",
   "Shield": "Shield",
+  "EveryoneCanVent": "Everyone Can Vent",
+  "OverrideScientistBasedRoles": "Also Override Scientist Based Roles to Engineer",
+  "WhackAMole": "Whack-A-Mole",
   "NoPetActionMsg1": "You just ate a cookie",
   "NoPetActionMsg2": "You look around",
   "NoPetActionMsg3": "You start wondering whether you are sus or not",
