Simplify a lot of stuff and fix error spam

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2342,37 +2342,7 @@
   "DivinatorCheck.SlowGame": "<b>{0}</b> seems to like it if the game is going slow.",
   "DivinatorCheck.HelpFromDead": "<b>{0}</b> seems to be getting help from the dead.",
   "DivinatorCheck.UnusualGoal": "<b>{0}</b> seems to have an unusual win condition.",
-  "DivinatorCheck.Null": "<b>{0}</b> is a role that is not listed.\\nThis message should not appear normally.",
-  "DivinatorCheck.Result0": "<b>{0}</b> is either Crewmate, Engineer, Scientist, Impostor, or Shapeshifter",
-  "DivinatorCheck.Result1": "<b>{0}</b> is either Amnesiac, Copycat, Eraser, Telecommunication, Anti Adminer, Dazzler, Lighter, or Grenadier",
-  "DivinatorCheck.Result2": "<b>{0}</b> is either Crusader, Tornado, Investigator, Arsonist, Ninja, Undertaker, Lightning, or Collector",
-  "DivinatorCheck.Result3": "<b>{0}</b> is either Capitalist, Witness, Philantropist, Ventguard, Consort, Greedy, Merchant, or Trickster",
-  "DivinatorCheck.Result4": "<b>{0}</b> is either Pestilence, Electric, Plaguebearer, Donut Delivery, Observer, Blood Knight, Guardian, or Wildling",
-  "DivinatorCheck.Result5": "<b>{0}</b> is either Bard, Sentinel, Ricochet, Juggernaut, Security Guard, Arrogance, Killing Machine, or Butcher",
-  "DivinatorCheck.Result6": "<b>{0}</b> is either Coroner, Mole, Stealth, Evil Tracker, Mortician, Tracefinder, Romantic, or Tracker",
-  "DivinatorCheck.Result7": "<b>{0}</b> is either Bodyguard, Bomber, Lookout, Vengeful Romantic, Ruthless Romantic, Kidnapper, Fireworker, or Nuker",
-  "DivinatorCheck.Result8": "<b>{0}</b> is either Bounty Hunter, Sprayer, Mafioso, Detective, Hater, Cleaner, Medusa, or Psychic",
-  "DivinatorCheck.Result9": "<b>{0}</b> is either Convict, Penguin, Hookshot, Executioner, Lawyer, Snitch, Disperser, or Doctor",
-  "DivinatorCheck.Result10": "<b>{0}</b> is either Councillor, Escort, Bubble, Shiftguard, Dictator, Judge, Cleanser, or Cursed Wolf",
-  "DivinatorCheck.Result11": "<b>{0}</b> is either Addict, Alchemist, Mycologist, Escapist, Miner, Demolitionist, or Morphling",
-  "DivinatorCheck.Result12": "<b>{0}</b> is either Demon, Enderman, Doormaster, Zombie, Celebrity, Super Star, Deathpact, or Devourer",
-  "DivinatorCheck.Result13": "<b>{0}</b> is either God, Oracle, Gambler, Insight, Visionary, Nice Eraser, Swapper, or Inspector",
-  "DivinatorCheck.Result14": "<b>{0}</b> is either Anonymous, Mastermind, Tunneler, Spy, Mayor, Paranoid, Pickpocket, or Vindicator",
-  "DivinatorCheck.Result15": "<b>{0}</b> is either Infectious, Detour, Virus, Agitator, Monarch, Revolutionist, Express, or Cultist",
-  "DivinatorCheck.Result16": "<b>{0}</b> is either Innocent, Gaulois, Sapper, Refugee, Bandit, Inhibitor, Mechanic, or Saboteur",
-  "DivinatorCheck.Result17": "<b>{0}</b> is either Medic, Vector, Analyzer, RiftMaker, Jester, The Glitch, Lurker, or Sunnyboy",
-  "DivinatorCheck.Result18": "<b>{0}</b> is either Nemesis, Hitman, Gangster, Glitch, Kamikaze, Luckey, or Underdog",
-  "DivinatorCheck.Result19": "<b>{0}</b> is either Evil Guesser, Nice Guesser, Blackmailer, Eclipse, Reckless, Stalker, Camouflager, or Chameleon",
-  "DivinatorCheck.Result20": "<b>{0}</b> is either Jackal, Sidekick, Duellist, WeaponMaster, Maverick, Opportunist, Pursuer, or Provocateur",
-  "DivinatorCheck.Result21": "<b>{0}</b> is either Poisoner, Magician, Yin Yanger, Vampire, Pacifist, Head Hunter, Soul Catcher, or Traitor",
-  "DivinatorCheck.Result22": "<b>{0}</b> is either Trapster, Cantankerous, Quick Shooter, Serial Killer, Sheriff, Werewolf, Admirer, or Warlock",
-  "DivinatorCheck.Result23": "<b>{0}</b> is either Fortune Teller, Postman, Consigliere, Drainer, Ritualist, Imitator, Hex Master, or Witch",
-  "DivinatorCheck.Result24": "<b>{0}</b> is either Lazy Guy, Hacker, Guess Manager, Follower, Pelican, Vengeance, Scavenger, or Vulture",
-  "DivinatorCheck.Result25": "<b>{0}</b> is either Jinx, Vigilante, Benefactor, Veteran, Enigma, Task Manager, Pyromaniac, or Hangman",
-  "DivinatorCheck.Result26": "<b>{0}</b> is either Medium, Camera Man, Nightmare, Spiritcaller, Spiritualist, Parasite, Swooper, or Wraith",
-  "DivinatorCheck.Result27": "<b>{0}</b> is either Time Manager, Time Master, Time Thief, Soul Hunter, Autocrat, Curse, Tether or Sniper",
-  "DivinatorCheck.Result28": "<b>{0}</b> is either Puppeteer, Chronomancer, Transmitter, Deputy, Aid, Transporter, Twister, Mercenary",
-  "DivinatorCheck.Result29": "<b>{0}</b> is either Crewpostor, Marshall, Nullifier, Altruist, Workaholic, Phantom, Speedrunner, or Terrorist",
+  "DivinatorCheckResult": "<b>{0}</b> is one of the following roles:\\n{1}",
   "SunnyboyChance": "<color=#ff9902>Sunnyboy</color> Chance",
   "BardChance": "<color=#ff1919>Bard</color> Chance",
   "NukerChance": "<color=#ff1919>Nuker</color> Chance",
