Add Busy (add-on)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -249,6 +249,7 @@
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
   "Flashman": "Flash",
+  "Busy": "Busy",
   "Truant": "Truant",
   "Disco": "Disco",
   "Asthmatic": "Asthmatic",
@@ -301,6 +302,7 @@
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
   "Prefix.Flashman": "Flash",
+  "Prefix.Busy": "Busy",
   "Prefix.Truant": "Truant",
   "Prefix.Disco": "Disco",
   "Prefix.Asthmatic": "Asthmatic",
@@ -568,6 +570,7 @@
   "UnluckyInfo": "Everything has a chance to kill you",
   "GhoulInfo": "Kill your killer after dying",
   "SunglassesInfo": "You have reduced vision",
+  "BusyInfo": "You have more tasks",
   "GMInfo": "Spectate the chaos!",
   "NotAssignedInfo": "Error, report to host!!",
   "SunnyboyInfo": "Shine, shine my sunshine!",
@@ -751,6 +754,7 @@
   "SleuthInfoLong": "(Add-ons):\\nYou know the roles of the bodies you report.",
   "FlashmanInfoLong": "(Add-ons):\\nThe Flash is faster by default.",
   "GiantInfoLong": "(Add-ons):\\nThe Giant is slower by default.",
+  "BusyInfoLong": "(Add-ons):\\nYou have more tasks.",
   "DiscoInfoLong": "(Add-ons):\\nYou change your skin color every few seconds.",
   "TorchInfoLong": "(Add-ons):\\nOnly Crewmates will get Torch, who have increased vision and may not be affected by Lights Sabotage.",
   "SeerInfoLong": "(Add-ons):\\nWhen a player dies, the Seer sees a red flash (with an alarm sound like sabotage).",
